# bfsca

./: .gitignore  AUTHOR  CMakeLists.txt  ChangeLog  INSTALL  README  clean  config  package  setup
bak/: CCSD_T.N2  CCSD_T_15v.N2  CCSD_T_25v.N2  HF_bnd.inp  Morse.H2  Morse.N2
bak/gamess/: HF_bnd.inp  HF_vxz.inp
bak/vibfun/: CCSD_T.N2  FCI.N2  HF.N2  MRCI.N2  Morse.N2  Morse.N2.old
doc/: Code_Standard
doc/PROGRAM/: A_lambda.tex  NOTE_LAVIB_SRC.aux  NOTE_LAVIB_SRC.tex  NOTE_LAVIB_SRC.toc  SE.sty  W_lambda.tex
doc/SE/: SCIENCE_REFERENCES.bib  Scatt_Equ.bbl  Scatt_Equ.tex  braket.sty  sce.eps  sce.fig  symbol.tex
run/: abcvdcs  alam  alamn  enmv  exker  fitpol  lavib  mpmom  spfd  tot_ex_sca  tot_lpot  total  total_dcs  total_rr  total_vib  vpola  vstat  vstpol  wlam  wlut
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/libnr/: CMakeLists.txt  gauleg.f  gaussian.f  spline.f  splint.f
src/lib/libqt/: CMakeLists.txt  clebg.f  pml.f  ylm.f
src/lib/libquadpack/: CMakeLists.txt  dqag.f
tools/: compile.sh  rmfiles
