# ================================================================
# bfsca src/lib CMakeLists.txt
#
# Hao Feng (RDS), XHU
#
# ================================================================
add_subdirectory(libquadpack)
add_subdirectory(libnr)
add_subdirectory(libqt)

# ================================================================
